--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "author": "RAK",
   "license": "ISC",
+  "repository" :
+  {
+    "type" : "git"
+    "url" : "https://github.com/rich-digi/StreamSend-Automation"
+  },
   "devDependencies": {
     "async": "^0.9.0",
     "grunt": "*",
