--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "repository" :
   {
-    "type" : "git"
+    "type" : "git",
     "url" : "https://github.com/rich-digi/StreamSend-Automation"
   },
   "devDependencies": {
