Changes to templete to make it more of a starting point

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,6 @@
 {
-  "streamsend_name": "N14-09-A",
-  "subject": "Sep14 account status + Avoiding data roaming nightmares",
+  "streamsend_name": "N1YY-MM-A",
+  "subject": "ADD SUBJECT HERE",
   "from_name": "dmNews: dmClub Customer News",
   "from_email": "editor@news.dmclub.net",
-  "id": "772"
 }
