Correcting syntax error in settings.json

--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,5 @@
   "streamsend_name": "N1YY-MM-A",
   "subject": "ADD SUBJECT HERE",
   "from_name": "dmNews: dmClub Customer News",
-  "from_email": "editor@news.dmclub.net",
+  "from_email": "editor@news.dmclub.net"
 }
