--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "streamsend_name": "N1YY-MM-A",
+  "streamsend_name": "NYY-MM-A",
   "subject": "ADD SUBJECT HERE",
   "from_name": "dmNews: dmClub Customer News",
   "from_email": "editor@news.dmclub.net"
