--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
   "streamsend_name": "NYY-MM-A",
   "subject": "ADD SUBJECT HERE",
   "from_name": "dmNews: dmClub Customer News",
-  "from_email": "editor@news.dmclub.net"
+  "from_email": "editor@news.dmclub.net",
+  "split": ""
 }
