--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "author": "RAK",
   "license": "ISC",
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/rich-digi/StreamSend-Automation"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rich-digi/StreamSend-Automation"
   },
   "devDependencies": {
     "async": "^0.9.0",
@@ -26,6 +25,8 @@
     "grunt-processhtml": "*",
     "grunt-string-replace": "*",
     "grunt-uncss": "*",
+    "jit-grunt": "^0.9.1",
+    "load-grunt-tasks": "^3.1.0",
     "mysql": "^2.4.3",
     "shelljs": "^0.3.0",
     "underscore": "*",
