--- a/settings.json
+++ b/settings.json
@@ -5,14 +5,14 @@
 			"variant": "A",
 			"subject": "ADD SUBJECT HERE",
 			"from_name": "dmNews: dmClub Customer News",
-			"from_email": "editor@news.dmclub.net",
+			"from_email": "editor@news.dmclub.net"
 		},
 		{
-			"variant": "A",
+			"variant": "B",
 			"subject": "ADD SUBJECT HERE",
 			"from_name": "dmNews: dmClub Customer News",
-			"from_email": "editor@news.dmclub.net",
+			"from_email": "editor@news.dmclub.net"
 		}
-	},
+	],
 	"split": ""
 }
