--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,20 @@
 {
-	"streamsend_root_name": "NYY-MM",
-	"variants": [
-		{
-			"variant": "A",
-			"subject": "ADD SUBJECT HERE",
-			"from_name": "dmNews: dmClub Customer News",
-			"from_email": "editor@news.dmclub.net"
-		},
-		{
-			"variant": "B",
-			"subject": "ADD SUBJECT HERE",
-			"from_name": "dmNews: dmClub Customer News",
-			"from_email": "editor@news.dmclub.net"
-		}
-	],
-	"split": ""
+  "streamsend_root_name": "NYY-MM",
+  "variants": [
+    {
+      "variant": "A",
+      "subject": "ADD SUBJECT HERE",
+      "from_name": "dmNews: dmClub Customer News",
+      "from_email": "editor@news.dmclub.net",
+      "id": "978"
+    },
+    {
+      "variant": "B",
+      "subject": "ADD SUBJECT HERE",
+      "from_name": "dmNews: dmClub Customer News",
+      "from_email": "editor@news.dmclub.net",
+      "id": "980"
+    }
+  ],
+  "split": ""
 }
