--- a/settings.json
+++ b/settings.json
@@ -1,23 +1,19 @@
 {
-  "streamsend_root_name": "NYY-MM",
+  "streamsend_root_name": "N15-04",
   "variants": [
     {
       "variant": "A",
       "subject": "VARIANT A - ADD SUBJECT HERE",
       "from_name": "dmNews: dmClub Customer News",
       "from_email": "editor@news.dmclub.net",
-      "id": "998",
-      "list_id": "218",
-      "blast_id": "23711351"
+      "list_id": "222"
     },
     {
       "variant": "B",
       "subject": "VARIANT B - ADD SUBJECT HERE",
       "from_name": "dmNews: dmClub Customer News",
       "from_email": "editor@news.dmclub.net",
-      "id": "1000",
-      "list_id": "220",
-      "blast_id": "23711353"
+      "list_id": "224"
     }
   ]
 }
