--- a/settings.json
+++ b/settings.json
@@ -3,20 +3,15 @@
   "variants": [
     {
       "variant": "A",
-      "subject": "Love in an elevator! dmBizClub's Pitch Your Business in 15 secs",
+      "subject": "Variant A subject line",
       "from_name": "dmNews: dmClub Customer News",
-      "from_email": "editor@news.dmclub.net",
-      "list_id": "222",
-      "blast_id": "23762805"
+      "from_email": "editor@news.dmclub.net"
     },
     {
       "variant": "B",
-      "subject": "dmClub - Putting the Biz in your Pocket",
+      "subject": "Variant B subject line",
       "from_name": "dmNews: dmClub Customer News",
-      "from_email": "editor@news.dmclub.net",
-      "list_id": "224",
-      "blast_id": "23762819"
-
+      "from_email": "editor@news.dmclub.net"
     }
   ]
 }
